@@ -34,7 +34,6 @@
 
 #include <math.h>
 #include <float.h> /* DBL_MAX */
-#include <R_ext/Applic.h>
 #include <R_ext/Boolean.h>
 #include <R_ext/Print.h>   /* Rprintf */
 #include <R_ext/PrtUtil.h> /* printRealVector */
@@ -46,7 +45,8 @@
 #else
 # include <R_ext/BLAS.h>
 #endif
-# include <R_ext/Linpack.h> /* dtrsl */
+#include <R_ext/Linpack.h> /* dtrsl, includes BLAS.h pro tem */
+#include <R_ext/Applic.h> /* fdhess, includes BLAS.h pro tem */
 #include <Rmath.h>
 // as in <Defn.h> :
 #define Rexp10(x) pow(10.0, x)
